# discovery-ce

./: CHANGELOG.md  README.md  astro.config.mjs  discovery.code-workspace  nx.json  package.json  pnpm-lock.yaml  renovate.json  workflow.schema.json
.github/workflows/: api-tests.yml  codeql.yml  deploy-docs.yml  generate-openapi.yml  scorecard.yml
apps/api/: .lintstagedrc.js  CHANGELOG.md  package.json  pyproject.toml
apps/api/discovery/: utils.py
apps/api/discovery/containers/: volume.py
apps/api/discovery/core/: celery.py  s3.py
apps/api/discovery/db/: models.py
apps/api/discovery/db/repositories/: registry.py
apps/api/discovery/routes/: tasks.py
apps/api/discovery/runs/: events_handler.py  registry.py  run.py
apps/api/discovery/schema/: cli.py  tasks.py  utils.py  workflows.py
apps/api/discovery/tasks/projectdiscovery/: httpx.py  subfinder.py
apps/api/discovery/ws/: runs.py
apps/discovery/: CHANGELOG.md  package.json
docker/api/: Dockerfile
docs/: README.md  astro.config.mjs  package.json
docs/src/: openapi.json
docs/src/content/docs/: overview.mdx
docs/src/content/docs/getting-started/: configuration.mdx  installation.mdx
docs/src/content/docs/guides/: running-assessments.mdx  task-integration.mdx
docs/src/content/docs/references/cli/: discovery-schema.mdx
libs/shared/: CHANGELOG.md  package.json
prisma/: CHANGELOG.md  package.json
src/: openapi.json
