[tool.coverage.run]
branch = true
source = [ "discovery" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/apps/api/html' --cov-report xml:'../../coverage/apps/api/coverage.xml' --html='../../reports/apps/api/unittests/html/index.html' --junitxml='../../reports/apps/api/unittests/junit.xml'"

[tool.poetry]
name = "discovery"
version = "1.0.0"
description = "Discovery Internal Api"
authors = ["Mohamed Ali <m.ali@0bytes.io>"]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "discovery"

  [tool.poetry.dependencies]
  python = "^3.12"
  fastapi = "^0.112.0"
  tortoise-orm = "^0.21.5"
  celery = {extras = ["redis"], version = "^5.4.0"}
  docker = "^7.1.0"
  fastapi-pagination = "^0.12.26"
  pusher = "^3.3.2"
  boto3 = "^1.34.151"
  uvicorn = {extras = ["standard"], version = "^0.30.6"}
  pyyaml = "^6.0.2"
  python-multipart = "^0.0.9"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.3.1"
  ruff = "0.5.7"
  pytest = "8.3.2"
  pytest-sugar = "1.0.0"
  pytest-cov = "5.0.0"
  pytest-html = "4.1.1"
  pytest-asyncio = "^0.23.8"
  boto3-stubs = {extras = ["essential"], version = "^1.34.151"}

  [tool.poetry.scripts]
  discovery-schema = "discovery.schema.cli:main"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 200
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
